<resources>
    <string name="app_name">SmokedOut</string>
    <string name="title_goals">Goals</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_goal_header">Add Goal</string>
    <string name="add_goal_name">Name your Goal</string>
    <string name="add_goal_period">Choose Goal Period</string>
    <string name="add_goal_daily">Daily</string>
    <string name="add_goal_weekly">Weekly</string>
    <string name="add_goal_monthly">Monthly</string>
    <string name="add_goal_set">Set your Goal</string>
    <string name="add_goal_days">Choose Days to Track Goal</string>
    <string name="add_goal_motivation">Write Something to Motivate Yourself</string>
    <string name="add_goal_more">or more times per day</string>
    <string name="add_goal_less">or fewer times per day</string>
    <string name="add_goal_submit">Submit</string>
    <string name="add_goal_sunday">S</string>
    <string name="add_goal_monday">M</string>
    <string name="add_goal_tuesday">T</string>
    <string name="add_goal_wednesday">W</string>
    <string name="add_goal_thursday">T</string>
    <string name="add_goal_friday">F</string>
    <string name="add_goal_saturday">S</string>
    <string name="channel_name">SmokedOut</string>
    <string name="channel_description">Notification channel for Smoked out</string>
    <string name="CHANNEL_ID">10001</string>
    <string name="Notification_ID">31415</string>
    <string name="title_activity_goal_progress">GoalProgress</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
